meet the trainers section

--- a/index.html
+++ b/index.html
@@ -101,9 +101,35 @@
         </section>
 
         <!-- "meet the trainers" section-->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephans</h3>
+                    <h4>Speed/Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ipsam a ut qui ducimus, natus corrupti et expedita, sed sit eligendi magni rerum temporibus ex facere incidunt veritatis aperiam iusto?</p>
+                </div>
+            </article>
 
+            <article class="trainer">
+                
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Enderance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptas, quidem labore repellendus nam pariatur? Dignissimos veniam blanditiis molestiae excepturi vel soluta molestias voluptate accusantium! Expedita sequi amet excepturi architecto!</p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt=""/>
+            </article>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "The Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore velit, nostrum molestiae minus ducimus odit, dolorem autem accusantium exercitationem, deserunt aut perferendis sapiente. Error totam hic nisi esse. Unde, provident.</p>
+                </div>
+            </article>
         </section>
 
         <!-- "reach out" section-->
@@ -113,10 +139,7 @@
 
         <!-- footer -->
         <footer>
-            <h2>
-    
-                ❤️ Made with love by Run Buddy
-            </h2>
+            <h2>❤️ Made with love by Run Buddy</h2>
             <div>
                 <a href="#">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
