--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
                     <h4>Enderance</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptas, quidem labore repellendus nam pariatur? Dignissimos veniam blanditiis molestiae excepturi vel soluta molestias voluptate accusantium! Expedita sequi amet excepturi architecto!</p>
                 </div>
-                <img src="./assets/images/trainer-2.jpg" alt=""/>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
             </article>
 
             <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="" />
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
                 <div class="trainer-bio text-left">
                     <h3>Harry "The Headband" Smith</h3>
                     <h4>Strength</h4>
@@ -133,8 +133,29 @@
         </section>
 
         <!-- "reach out" section-->
-        <section>
+        <section id="reach-out">
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1657.2508120897635!2d-118.33716982400284!3d33.8251721233627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dd4adb726d467f%3A0xb181ec577ff922ae!2s2800%20Plaza%20del%20Amo%2C%20Torrance%2C%20CA%2090503!5e0!3m2!1sen!2sus!4v1613167859839!5m2!1sen!2sus" 
+                    width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concers before signing up?
+                        <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br/>
+                        Some Town, Ca <br/>
+                        12345<br/>
+                        P: 555.RUN.BUDZ (555.786.2839)<br/>
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
+            </div>
         </section>
 
         <!-- footer -->
