--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         </section>
 
         <!-- "reach out" section-->
-        <section id="reach-out">
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1657.2508120897635!2d-118.33716982400284!3d33.8251721233627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dd4adb726d467f%3A0xb181ec577ff922ae!2s2800%20Plaza%20del%20Amo%2C%20Torrance%2C%20CA%2090503!5e0!3m2!1sen!2sus!4v1613167859839!5m2!1sen!2sus" 
