--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                     <div class="trainer-bio">
                         <h3 class="trainer-name">Arron Stephans</h3>
-                        <h4>Speed/Strength</h4>
+                        <h4 class="trainer-role">Speed/Strength</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ipsam a ut qui ducimus, natus corrupti et expedita, sed sit eligendi magni rerum temporibus ex facere incidunt veritatis aperiam iusto?</p>
                     </div>
                 </article>
